--- a/app/src/main/res/layout/item_team_vertical.xml
+++ b/app/src/main/res/layout/item_team_vertical.xml
@@ -24,10 +24,10 @@
         <ImageView
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/avatarPlayer"
+            android:id="@+id/avatarTeam"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/avatar_team"
+            app:srcCompat="@drawable/avatar_team_default"
             />
         <TextView
             android:textStyle="bold"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="@{team.name}"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/avatarPlayer"
+            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
             app:layout_constraintBottom_toTopOf="@+id/position"
             />
         <TextView
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text="@{team.email}"
             app:layout_constraintTop_toBottomOf="@+id/namePlayer"
-            app:layout_constraintLeft_toRightOf="@id/avatarPlayer"
+            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
             app:layout_constraintBottom_toBottomOf="parent"
             />
             <TextView
