--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
       app:layout_constraintRight_toRightOf="parent"
       android:layout_width="150dp"
       android:layout_height="150dp"
-      android:src="@drawable/avatar_team" />
+      android:src="@drawable/logo_app_default" />
 
  <LinearLayout
      android:id="@+id/loginBasic"
