--- a/app/src/main/res/layout/fragment_edit_main_team.xml
+++ b/app/src/main/res/layout/fragment_edit_main_team.xml
@@ -78,9 +78,10 @@
 
                     <ImageView
                         android:id="@+id/avatar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="400dp"
-                        android:background="@drawable/avatar_team"
+                        android:layout_gravity="center"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:background="@drawable/avatar_team_default"
                         android:scaleType="fitXY"></ImageView>
                 </LinearLayout>
 
@@ -114,9 +115,10 @@
 
                     <ImageView
                         android:id="@+id/cover"
-                        android:layout_width="wrap_content"
-                        android:layout_height="400dp"
-                        android:background="@drawable/cover_team"
+                        android:layout_gravity="center"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:background="@drawable/cover_default"
                         android:scaleType="fitXY"></ImageView>
                 </LinearLayout>
 
