--- a/app/src/main/res/layout/fragment_list_player.xml
+++ b/app/src/main/res/layout/fragment_list_player.xml
@@ -12,44 +12,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_constraintTop_toTopOf="parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="Edit information basic"
-                    android:gravity="center_vertical"
-                    android:textSize="20dp"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"/>
-                <ImageButton
-                    android:id="@+id/image_btn_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingHorizontal="15dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/ic_baseline_replay_white_24"/>
-                <ImageButton
-                    android:id="@+id/image_btn_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingHorizontal="15dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/ic_baseline_check_white_24"/>
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
+
         <FrameLayout
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
           >
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
