--- a/app/src/main/res/layout/fragment_main_information_match.xml
+++ b/app/src/main/res/layout/fragment_main_information_match.xml
@@ -70,7 +70,7 @@
                 android:id="@+id/club1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/avatar_team"
+                android:src="@drawable/avatar_team_default"
                 app:border_color="@color/white"
                 app:border_width="5dp" />
 
