--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -6,11 +6,13 @@
     <data>
         <import type="com.example.myclub.viewModel.TeamViewModel"></import>
     </data>
-<LinearLayout android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+    android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -29,9 +31,6 @@
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:textColor="@color/white"/>
-
-
-
             <ImageButton
                 android:id="@+id/btnEdit"
                 android:layout_width="wrap_content"
@@ -42,103 +41,129 @@
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-
-    <androidx.cardview.widget.CardView
-        android:layout_width ="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="20dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/inforReview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/cover"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:src="@drawable/cover_team"
-                android:scaleType="fitXY"
-
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/avatar_team"
-                app:border_color="@color/white"
-                app:border_width="5dp"
-                app:layout_constraintBottom_toBottomOf="@id/cover"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cover" />
-          <TextView
-              android:textStyle="bold"
-              android:textSize="25dp"
-              android:gravity="center"
-              android:id="@+id/lblName"
-              android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
-              app:layout_constraintTop_toBottomOf="@id/avatar"
-             app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintRight_toRightOf="parent"
-              android:layout_height="30dp"
-              android:layout_width="0dp"></TextView>
-            <LinearLayout
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:orientation="horizontal"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintTop_toBottomOf="@id/lblName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="@{TeamViewModel.getInstance().teamLiveData.level}"
-                    android:textStyle="bold"
-                    android:drawableStart="@drawable/ic_baseline_home_24"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                   ></TextView>
-                <TextView
-                    android:text="123"
-                    android:textStyle="bold"
-                    android:drawableStart="@drawable/ic_baseline_home_24"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                   ></TextView>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_baseline_home_24"
-                    android:text="123"
-                    android:textStyle="bold"></TextView>
-            </LinearLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"  >
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/previewInfor"
+            android:layout_width ="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="20dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/inforReview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:src="@drawable/cover_default"
+                    android:scaleType="fitXY"
+
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/avatar_team_default"
+                    app:border_color="@color/white"
+                    app:border_width="5dp"
+                    app:layout_constraintBottom_toBottomOf="@id/cover"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cover" />
+                <TextView
+                    android:textStyle="bold"
+                    android:textSize="25dp"
+                    android:gravity="center"
+                    android:id="@+id/lblName"
+                    android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+                    app:layout_constraintTop_toBottomOf="@id/avatar"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_height="30dp"
+                    android:layout_width="0dp"></TextView>
+                <LinearLayout
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/lblName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="@{TeamViewModel.getInstance().teamLiveData.level}"
+                        android:textStyle="bold"
+                        android:drawableStart="@drawable/ic_baseline_home_24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        ></TextView>
+                    <TextView
+                        android:text="123"
+                        android:textStyle="bold"
+                        android:drawableStart="@drawable/ic_baseline_home_24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        ></TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_baseline_home_24"
+                        android:text="123"
+                        android:textStyle="bold"></TextView>
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
         <com.google.android.material.tabs.TabLayout
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-        <!--    adapter dau-->
-
         <androidx.viewpager.widget.ViewPager
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/tablayout"
+             android:layout_height="match_parent"
+            />
 
-            android:layout_height="0dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        android:id="@+id/loading_layout"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="0dp">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 </layout>
