--- a/app/src/main/res/layout/fragment_profile_myself.xml
+++ b/app/src/main/res/layout/fragment_profile_myself.xml
@@ -68,7 +68,7 @@
                     <ImageView
                         android:id="@+id/cover"
                         android:layout_width="match_parent"
-                        android:src="@drawable/cover_player"
+                        android:src="@drawable/cover_default"
                         android:scaleType="fitXY"
                         android:layout_height="160dp"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +77,7 @@
                         android:id="@+id/avatar"
                         android:layout_width="130dp"
                         android:layout_height="130dp"
-                        android:src="@drawable/avatar_player"
+                        android:src="@drawable/avatar_player_default"
                         app:border_color="@color/white"
                         app:border_width="5dp"
                         app:layout_constraintBottom_toBottomOf="@id/cover"
