--- a/app/src/main/res/layout/fragment_profile_player.xml
+++ b/app/src/main/res/layout/fragment_profile_player.xml
@@ -98,7 +98,44 @@
                             android:layout_height="wrap_content"></TextView>
 
                         <LinearLayout
-                            app:layout_constraintTop_toBottomOf="@id/lblName"
+                            android:gravity="center"
+                            android:id="@+id/action"
+                            android:orientation="horizontal"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/lblName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <Button
+
+                                android:id="@+id/btnInvite"
+                                android:text="Invite to Team"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"></Button>
+
+                            <Button
+                                android:visibility="gone"
+                                android:id="@+id/btnDecline"
+                                android:text="Decline Team"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"></Button>
+
+                            <Button
+                                android:visibility="gone"
+                                android:id="@+id/btnAccept"
+                                android:text="Accept to Team "
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/lblName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"></Button>
+
+                        </LinearLayout>
+
+
+
+                        <LinearLayout
+                            app:layout_constraintTop_toBottomOf="@id/action"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             android:layout_width="wrap_content"
