--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
       android:textColor="#0c0d0c"
       android:textColorHint="#0c0d0c"
       android:textColorHighlight="#FFFFFF"
-      android:text="test@gmail.com"
+      android:text="meo@gmail.com"
       />
 
   <EditText
