--- a/app/src/main/res/layout/fragment_edit_main_player.xml
+++ b/app/src/main/res/layout/fragment_edit_main_player.xml
@@ -2,15 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <import type="com.example.myclub.data.session.SessionUser"></import>
     </data>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
@@ -76,13 +78,19 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageView
-                        android:layout_gravity="center"
-                        android:id="@+id/avatar"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:background="@drawable/avatar_player_default"
-                        android:scaleType="fitXY"></ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/avatar"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:src="@drawable/avatar_player_default"
+                            app:border_color="@color/white"
+                            app:border_width="5dp" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -113,13 +121,24 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageView
-                        android:background="@drawable/cover_default"
-                        android:layout_gravity="center"
-                        android:id="@+id/cover"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:scaleType="fitXY"></ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+                        <androidx.cardview.widget.CardView
+                            app:cardCornerRadius="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <ImageView
+                                android:id="@+id/cover"
+                                android:layout_width="match_parent"
+                                android:src="@drawable/cover_default"
+                                android:scaleType="fitXY"
+                                android:layout_height="160dp"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
                 </LinearLayout>
 
 
@@ -129,10 +148,11 @@
                     android:orientation="horizontal">
 
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Information basic"
+                        android:text="Contact"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -152,28 +172,30 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:drawableStart="@drawable/name_icon"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
                         android:text="@{SessionUser.getInstance().playerLiveData.name}"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="16dp"  />
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text="@{SessionUser.getInstance().playerLiveData.email}"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
+                        android:drawablePadding="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="@{SessionUser.getInstance().playerLiveData.phone}"
                         android:textSize="16dp"
-                        android:textStyle="bold" />
+                       />
+
+                    <TextView
+                        android:drawableStart="@drawable/email_icon"
+                        android:drawablePadding="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{SessionUser.getInstance().playerLiveData.email}"
+                        android:textSize="16dp"
+                       />
                 </LinearLayout>
 
                 <LinearLayout
@@ -185,7 +207,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Information player"
+                        android:text="Information"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -204,52 +226,50 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:drawableStart="@drawable/birthday"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
                         android:text="@{SessionUser.getInstance().playerLiveData.birthday}"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text="@{Integer.toString(SessionUser.getInstance().playerLiveData.height) }"
                         android:textSize="16dp"
-                        android:textStyle="bold" />
+                       />
 
                     <TextView
+                        android:drawableStart="@drawable/weight_icon"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text="@{Integer.toString(SessionUser.getInstance().playerLiveData.weight)}"
+
+                        android:text="@{Integer.toString(SessionUser.getInstance().playerLiveData.weight) }"
                         android:textSize="16dp"
-                        android:textStyle="bold" />
+                        />
 
                     <TextView
+                        android:drawableStart="@drawable/height_icon"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text="@{SessionUser.getInstance().playerLiveData.level}"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:text="@{Integer.toString(SessionUser.getInstance().playerLiveData.height)}"
+                        android:textSize="16dp"
+                        />
 
                     <TextView
+                        android:drawableStart="@drawable/position"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
                         android:text="@{SessionUser.getInstance().playerLiveData.position}"
                         android:textSize="16dp"
-                        android:textStyle="bold" />
+                        />
 
                     <TextView
+                        android:drawableStart="@drawable/foot"
+                        android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_phone_24_green"
                         android:text="@{SessionUser.getInstance().playerLiveData.foot}"
                         android:textSize="16dp"
-                        android:textStyle="bold" />
+                        />
 
                 </LinearLayout>
 
@@ -262,7 +282,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Introduce myself"
+                        android:text="Introduce"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -279,14 +299,15 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{SessionUser.getInstance().playerLiveData.birthday}"
-                    android:textStyle="bold" />
+                    android:layout_height="200dp"
+                    android:text="@{SessionUser.getInstance().playerLiveData.introduce}"
+                     />
             </LinearLayout>
         </ScrollView>
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
