--- a/app/src/main/res/layout/fragment_list_queue_team.xml
+++ b/app/src/main/res/layout/fragment_list_queue_team.xml
@@ -6,72 +6,39 @@
     <data>
         <import type="android.view.View" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/homeTeam"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:id="@+id/avatarTeam"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:srcCompat="@drawable/avatar_team_default"
-                />
-            <TextView
-                android:textStyle="bold"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/namePlayer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="123"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-                app:layout_constraintBottom_toTopOf="@+id/position"
-                />
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:id="@+id/position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="123"
-                app:layout_constraintTop_toBottomOf="@+id/namePlayer"
-                app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-            <TextView
-                android:id="@+id/numberShirt"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:text="10"
-                android:textSize="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            </TextView>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-            <androidx.constraintlayout.widget.ConstraintLayout
-                app:layout_constraintTop_toBottomOf="@id/homeTeam"
-                android:layout_margin="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp">
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+                <LinearLayout
+                    android:gravity="center"
+                    android:id="@+id/listAction"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/aaa"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/btnJoin"
+                        android:text="Join Game"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"></Button>
+                    <Button
+                        android:id="@+id/btnCancel"
+                        android:text="Cancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"></Button>
+                </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/aaa"
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/btnDetail"
@@ -80,12 +47,6 @@
                             android:text="Đội đang chờ"
                             android:textSize="20dp"></TextView>
 
-                        <EditText
-                            android:id="@+id/txtName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="tên cầu thủ"/>
-                    </LinearLayout>
 
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -95,7 +56,5 @@
 <!--                    android:adapter="@{viewModel.adapter}"-->
 
                 </LinearLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
 </layout>
