--- a/app/src/main/res/layout/item_team_vertical.xml
+++ b/app/src/main/res/layout/item_team_vertical.xml
@@ -10,24 +10,27 @@
             type="com.example.myclub.model.Team" />
     </data>
 <androidx.cardview.widget.CardView
+
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:contentPadding="10dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
+    app:cardBackgroundColor="#e6ffee"
    >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/avatarTeam"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/avatar_team_default"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+           android:background="@drawable/avatar_team_default"
+            app:layout_constraintRight_toRightOf="parent"
             />
         <TextView
             android:textStyle="bold"
@@ -36,32 +39,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{team.name}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-            app:layout_constraintBottom_toTopOf="@+id/position"
+            android:textSize="20dp"
+           app:layout_constraintTop_toBottomOf="@+id/avatarTeam"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             />
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:id="@+id/position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{team.email}"
-            app:layout_constraintTop_toBottomOf="@+id/namePlayer"
-            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-            <TextView
-                 android:id="@+id/numberShirt"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:text="10"
-                android:textSize="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            </TextView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 </layout>
